@@ -54,6 +54,10 @@ monster_max_aspd: 199
 //    players on them, instead of only for mobs who are in the vecinity of players.
 //64: When set, when the mob's target changes map, the mob will walk towards
 //    any npc-warps in it's sight of view (use with mob_npc_warp below)
+//128: When set, aggressive mobs will give the same priority to Homuns and
+//    players and will go after the closest target instead of always picking
+//    the homunculus
+//    
 monster_ai: 0
 
 // Should mobs be able to be warped (add as needed)?
